raffia/tests/error/less/detached-ruleset/1.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `{`
  ┌─ 1.less:1:4
  │
1 │ .a {
  │    ^


